--- a/app/views/v6-pcn/we-need-proof.html
+++ b/app/views/v6-pcn/we-need-proof.html
@@ -74,19 +74,18 @@ We need proof that you were entitled to claim free NHS prescriptions
           You were getting Universal Credit
       </summary>
       <div class="nhsuk-details__text">
+        
         <p>A clear image of every page of your Universal Credit letter or statement.</p>
         <p>Your Universal Credit exemption must have been valid at the time you claimed a free prescription.</p>
-        <p>You are entitled to claim free NHS prescriptions if your earnings during your most recent assessment period
-          were:</p>
+        <p>You are only entitled to claim free NHS prescriptions if the total take home pay for your household in your last assessment period was:</p>
+
         <ul>
           <li>£435 or less</li>
-          <li>£935 or less if your Universal Credit includes a payment for a child or you have limited capability for
-            work or work-related activity</li>
+          <li>£935 or less if your Universal Credit includes a payment for a child, or you have limited capability for work (LCW) or limited capability for work or work-related activity (LCWRA)</li>
         </ul>
-        <p>'Most recent assessment period' means the assessment period that ended immediately before the date you
-          claimed free NHS prescriptions. It runs for a calendar month.</p>
-        <p>If you claim Universal Credit as a couple, the earnings limit applies to the joint income of you and your
-          partner.</p>
+        
+        <p>The last assessment period is the one that ended immediately before the date you claimed free NHS prescriptions. It runs for a calendar month.</p>
+        <p><a href="https://www.gov.uk/self-employment-and-universal-credit">If you are self-employed check the criteria on the GOV.UK website.</a></p>
 
       </div>
     </details>
