Changing full stop location.

--- a/app/views/v6-pcn/we-need-proof.html
+++ b/app/views/v6-pcn/we-need-proof.html
@@ -85,7 +85,7 @@ We need proof that you were entitled to claim free NHS prescriptions
         </ul>
         
         <p>The last assessment period is the one that ended immediately before the date you claimed free NHS prescriptions. It runs for a calendar month.</p>
-        <p><a href="https://www.gov.uk/self-employment-and-universal-credit">If you are self-employed check the criteria on the GOV.UK website.</a></p>
+        <p><a href="https://www.gov.uk/self-employment-and-universal-credit">If you are self-employed check the criteria on the GOV.UK website</a>.</p>
 
       </div>
     </details>
