--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -106,7 +106,7 @@
         </ul>
         
         <p>The last assessment period is the one that ended immediately before the date you claimed free NHS prescriptions. It runs for a calendar month.</p>
-        <p><a href="https://www.gov.uk/self-employment-and-universal-credit">If you are self-employed check the criteria on the GOV.UK website.</a></p>
+        <p><a href="https://www.gov.uk/self-employment-and-universal-credit">If you are self-employed check the criteria on the GOV.UK website</a>.</p>
 
       </div>
     </details>
