Creating DECS HC3 examples for Expedite a PCN.

--- a/app/views/v6-pcn-decs/penalty-charge-details-hc3-decs.html
+++ b/app/views/v6-pcn-decs/penalty-charge-details-hc3-decs.html
@@ -11,6 +11,7 @@ Penalty Charge Notice details HC3
 {% endblock %}
 
 {% block content %}
+
 <style>
   .payment-summary {
     border-top: 2px solid #1d70b8;
@@ -95,11 +96,64 @@ Penalty Charge Notice details HC3
       
     <div class="nhsuk-card">
       <div class="nhsuk-card__content">
+
+
         <h2 class="nhsuk-card__heading">
           Penalty Charge Notice amount
-
         </h3>
-        <dl class="nhsuk-summary-list nhsuk-summary-list">
+
+<!--
+            {
+              key: { text: '' },
+              value: { text: '' }
+            },
+
+*** Dental treatment charges = £269.30
+*** HC3 Contribution = £249.66
+*** Amount you should've paid = £249.66
+*** Amount you've already paid = £55.92
+*** Outstanding treatment charges = £193.74
+*** Penalty charge = £100
+Total amount to pay = £293.74
+Amount still to pay = £293.74
+
+            -->
+
+        {{ summaryList({
+          rows: [
+            {
+              key: { text: 'Dental treatment charges' },
+              value: { text: '£269.30' }
+            },
+            {
+              key: { text: 'HC3 Contribution' },
+              value: { text: '£249.66' }
+            },
+            {
+              key: { text: "Amount you should've paid" },
+              value: { text: '£249.66' }
+            },
+            {
+              key: { text: "Amount you've already paid" },
+              value: { text: '£55.92' }
+            },
+            {
+              key: { text: 'Outstanding treatment charges' },
+              value: { text: '£193.74' }
+            },
+            {
+              key: { text: 'Penalty charge' },
+              value: { text: '£100' }
+            },
+            {
+              key: { text: 'Total amount to pay' },
+              value: { text: '£293.74' }
+            }
+          ]
+        }) }}
+
+
+        <!--<dl class="nhsuk-summary-list nhsuk-summary-list">
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
@@ -158,7 +212,8 @@ Penalty Charge Notice details HC3
           </div>
 
 
-        </dl>
+        </dl>-->
+
 
        
             
@@ -178,7 +233,7 @@ Penalty Charge Notice details HC3
               Payments made
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £0.00
+              £55.92
             </dd>
 
           </div>
@@ -189,7 +244,7 @@ Penalty Charge Notice details HC3
 
         </dl>
         <p style="font-weight: bold; font-size:36px;">
-         Amount still to pay: £88.20
+         Amount still to pay: £193.74
 
         </p>
 
