--- a/app/views/v5-enquiry/enquiry-letter-details.html
+++ b/app/views/v5-enquiry/enquiry-letter-details.html
@@ -78,7 +78,7 @@ Enquiry letter
 
 
 
-      {% if data[version].allowEmail === 'true' %}
+      {% if data.settings[version].allowEmail === 'true' %}
 
         <!-- Allow email is set in the session-data-defaults.js file -->
 
